force-app/main/CS-QueueScience/objects/QueueItem__c/QueueItem__c.object-meta.xml
<CustomObject>
    <label>Queue Item</label>
    <nameField>
        <displayFormat>QI-{000000000}</displayFormat>
        <label>Queue Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>