force-app/main/CS-QueueScience/objects/QueueItem__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <externalId>true</externalId>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>