force-app/main/CS-QueueScience/objects/QueueItem__c/fields/ErrorMessageShort__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageShort__c</fullName>
    <externalId>true</externalId>
    <label>Error Message (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>