force-app/main/CS-QueueScience/objects/QueueItem__c/fields/IntegrationID__c.field-meta.xml
<CustomField>
    <fullName>IntegrationID__c</fullName>
    <label>Integration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>