force-app/main/CS-QueueScience/objects/QueueItem__c/fields/LinkToRecord__c.field-meta.xml
<CustomField>
    <fullName>LinkToRecord__c</fullName>
    <formula>IF (
            ISBLANK(RecordId__c),
            &apos;No Record Involved&apos;,
            HYPERLINK(&quot;/&quot; &amp; RecordId__c , &apos;View Record&apos;, &quot;_blank&quot;)
            )</formula>
    <label>Link to Record</label>
    <type>Text</type>
</CustomField>