force-app/main/CS-QueueScience/objects/QueueItem__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Marked as External Id to create an index.</description>
    <externalId>true</externalId>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>