force-app/main/CS-QueueScience/objects/QueueItem__c/fields/Process_After__c.field-meta.xml
<CustomField>
    <fullName>Process_After__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Do not process the Queue Item until after this data. Default now</description>
    <inlineHelpText>Do not process the Queue Item until after this data. Default now</inlineHelpText>
    <label>Process After</label>
    <type>DateTime</type>
</CustomField>