force-app/main/CS-QueueScience/objects/QueueItem__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Contains the SFDC Id of the record to be processed.</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>