force-app/main/CS-QueueScience/objects/QueueItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;NEW&quot;</defaultValue>
    <description>Marked as External Id to create an index.</description>
    <externalId>true</externalId>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>