force-app/main/CS-QueueScience/objects/QueueItem__c/fields/System_Error__c.field-meta.xml
<CustomField>
    <fullName>System_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Error</label>
    <type>Checkbox</type>
</CustomField>