force-app/main/CS-QueueScience/objects/QueueItem__c/validationRules/Count_by_One_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_by_One_Only</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ErrorCount__c &lt;&gt; 0
            , ErrorCount__c &lt;&gt; PRIORVALUE(ErrorCount__c)+1
            , ErrorCount__c &lt;&gt; PRIORVALUE(ErrorCount__c))</errorConditionFormula>
    <errorDisplayField>ErrorCount__c</errorDisplayField>
    <errorMessage>Error Count can only increment by 1.</errorMessage>
</ValidationRule>